--- a/day2-task/style.css
+++ b/day2-task/style.css
@@ -141,12 +141,12 @@ tr:nth-child(even) {
   background-color: #d4f0f8;
 }
 
-.download-container{
+.download-container {
   text-align: center;
   margin: 20px 0;
 }
 
-.cv-download{
+.cv-download {
   display: flex inline;
   text-size-adjust: 14px;
   margin-left: 80px;
@@ -155,19 +155,26 @@ tr:nth-child(even) {
   background-color: #f2f1f1;
   border: 1px solid #999;
   gap: 20px;
-  
 }
+
 .cv-download a:link {
+  padding: 10px;
+  align-items: center;
+  text-align: center;
+  color: #000;
   text-decoration: none;
 }
-.cv-download svg{
-  margin: 8px 0 6px 0;
+
+.cv-download svg {
+  margin-top: 14px;
 }
-.cv-download:hover{
+
+.cv-download:hover {
   border: 1px solid pink;
   padding: 0 20px;
   transform: scale(1.05);
 }
+
 .grid-container {
   display: flex;
   flex-wrap: wrap;
@@ -313,7 +320,7 @@ footer {
     margin: 10px 0;
   }
 
-  .cv-download{
+  .cv-download {
     flex-direction: column;
     justify-content: center;
     text-align: center;
