--- a/week4/day3-task/calender-app/src/index.css
+++ b/week4/day3-task/calender-app/src/index.css
@@ -1,15 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-body{
-   font-family: "PT Sans", sans-serif;
-  font-style: normal;
+body {
+  font-family: "Arial", sans-serif;
 }
